# mem-infector

./: .gitignore  CMakeLists.txt  README.md  build.sh  server.c
demo/: CMakeLists.txt  bin_opt.cpp  virus.cpp  wechat_hook.cpp
src/: CMakeLists.txt
src/infector/: CMakeLists.txt  cmdline.h  editso.cpp  editso.h  elfopt.cpp  elfopt.h  infector.cpp  infector.h  single.hpp  targetopt.cpp  targetopt.h
src/infector/elf/: elf_dynamic.cpp  elf_section.cpp  elf_section.h  elfopt.cpp  elfopt.h
src/inject/: CMakeLists.txt  eviluser.cpp  eviluser.h  inject.c  inject.cpp  inject.h
src/log/: CMakeLists.txt
src/virus/: CMakeLists.txt  virus.cpp
src/xed/: CMakeLists.txt  xed-decoded-inst-api.h  xed-encode-tables.h  xed-encoder-init.c  xed-encoder-order-init.c  xed-init-reg-class.c  xed-init-width.c  xed-tables.h
